service.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: solar-system
spec: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: solar-system
  name: solar-system-service
  namespace: solar-system
spec:
  ports:
  - port: 80 #change to 80
    protocol: TCP
    targetPort: 80 #change to 80
    nodePort: 30333
  selector:
    app: solar-system
  type: NodePort
